# squire

./: .gitignore  Cargo.toml  Readme.md  build.rs
.github/actions/fetch-sqlite/: action.yml
.github/workflows/: ci.yml
crates/config/: Cargo.toml  Readme.md
crates/config/src/: lib.rs
crates/config/src/types/: mod.rs  sql.rs  synchronous.rs  temp.rs  threading.rs  vacuum.rs
crates/derive/: Cargo.toml
crates/derive/src/: column.rs  common.rs  lib.rs  param.rs
crates/features/: Cargo.toml  Readme.md
crates/features/src/: info.rs  lib.rs  metadata.rs  version.rs
crates/features/src/directive/: declare.rs  map.rs  mod.rs  value.rs
crates/features/src/feature/: api.rs  blob.rs  config.rs  database.rs  declare.rs  extension.rs  fts.rs  functions.rs  hooks.rs  json.rs  metadata.rs  mod.rs  sql.rs  statistics.rs  storage.rs  text.rs
crates/features/src/probe/: dynamic.rs  flag.rs  mod.rs
crates/serde/: Cargo.toml  Readme.md
crates/serde/src/: lib.rs
crates/src/: Cargo.toml  build.rs
crates/src/fetch/: Cargo.toml
crates/src/fetch/src/: main.rs
crates/src/src/: lib.rs
crates/sys/: Cargo.toml  Readme.md  build.rs
crates/sys/src/: lib.rs
crates/sys/src/bindings/: destructor.rs  mod.rs
crates/sys/src/bindings/default/: column.rs  config.rs  connection.rs  database.rs  function.rs  init.rs  memory.rs  mod.rs  mutex.rs  param.rs  result.rs  statement.rs  string.rs  types.rs  value.rs  version.rs
crates/version/: Cargo.toml  Readme.md
crates/version/src/: lib.rs
src/: bind.rs  blob.rs  column.rs  connection.rs  database.rs  endpoint.rs  error.rs  fetch.rs  iter.rs  lib.rs  param.rs  query.rs  row.rs  statement.rs  types.rs  value.rs
src/error/: category.rs  code.rs  detail.rs  integration.rs  location.rs  mod.rs  reason.rs
src/ffi/: bind.rs  bytes.rs  call.rs  connection.rs  context.rs  fetch.rs  func.rs  location.rs  mod.rs  mutex.rs  pointer.rs  statement.rs  string.rs  text.rs  value.rs
src/func/: mod.rs
src/types/: bind.rs  borrow.rs  column.rs  func.rs  json.rs  mod.rs  row_id.rs  text.rs  value.rs
src/types/integration/: chrono.rs  jiff.rs  mod.rs  url.rs  uuid.rs
tests/: columns.rs  jiff.rs  json.rs  parameters.rs  query.rs  raw.rs
