[package]
name = "squire"
version = "0.0.1-alpha.4"
edition = "2024"
description = "Safe and idiomatic SQLite bindings"
readme = "Readme.md"
repository.workspace = true
license.workspace = true
categories = ["api-bindings", "database"]
keywords = ["sqlite", "database", "api", "bindings", "sql"]

[workspace]
resolver = "3"
members = ["crates/derive", "crates/features", "crates/serde", "crates/sys"]

[workspace.package]
repository = "https://github.com/silverlyra/squire"
license = "Apache-2.0"

[features]
# default = ["linked", "common", "multi-thread"]
default = ["bundled", "common", "derive", "multi-thread"]
derive = ["dep:squire-derive"]

common = ["sqlite/common", "json", "mutex"]
full = ["sqlite/full", "common"]
complete = ["full", "integrations"]

bundled = ["sqlite/bundled"]
linked = ["sqlite/linked"]
static = ["sqlite/static"]

single-thread = ["sqlite/single-thread"]
multi-thread = ["sqlite/multi-thread"]
serialized = ["sqlite/serialized", "mutex"]

armor = ["sqlite/armor"]
authorization = ["sqlite/authorization"]
auto-vacuum = ["sqlite/auto-vacuum"]
blob-io = ["sqlite/blob-io"]
column-metadata = ["sqlite/column-metadata"]
decltype = ["sqlite/decltype"]
extensions = ["sqlite/extensions"]
fts = ["sqlite/fts"]
fts3 = ["sqlite/fts3"]
fts5 = ["sqlite/fts5"]
geo = ["sqlite/geo"]
geopoly = ["sqlite/geopoly"]
json = ["squire-serde?/json", "sqlite/json"]
memory-status = ["sqlite/memory-status"]
mutex = []
normalize-sql = ["sqlite/normalize-sql"]
page-vtab = ["sqlite/page-vtab"]
preupdate-hook = ["sqlite/preupdate-hook"]
progress-callback = ["sqlite/progress-callback"]
rtree = ["sqlite/rtree"]
serialize = ["sqlite/serialize"]
session = ["sqlite/session"]
shared-cache = ["sqlite/shared-cache"]
snapshot = ["sqlite/snapshot"]
soundex = ["sqlite/soundex"]
stat-vtab = ["sqlite/stat-vtab"]
stat4 = ["sqlite/stat4"]
trace = ["sqlite/trace"]
utf-16 = ["sqlite/utf-16"]

integrations = ["jsonb", "serde", "url", "widestring"]
jsonb = ["json", "squire-serde?/jsonb"]
serde = ["dep:squire-serde"]
url = ["dep:url"]
widestring = ["utf-16", "dep:widestring"]

nightly = ["lang-array-assume-init", "lang-rustc-scalar-valid-range", "lang-step-trait"]
lang-array-assume-init = ["squire-derive?/lang-array-assume-init"]
lang-iat = []
lang-rustc-scalar-valid-range = []
lang-step-trait = []

[dependencies.squire-derive]
path = "crates/derive"
version = "0.0.1-alpha.1"
optional = true
default-features = false

[dependencies.squire-serde]
path = "crates/serde"
version = "0.0.1-alpha.1"
optional = true

[dependencies.sqlite]
package = "squire-sqlite3-sys"
path = "crates/sys"
version = "0.0.1-alpha.4"
default-features = false

[dependencies.url]
version = "^2.5"
optional = true

[dependencies.widestring]
version = "^1.0.2"
optional = true

[build-dependencies.features]
package = "squire-sqlite3-features"
path = "crates/features"
version = "0.0.1-alpha.1"
features = ["metadata"]

[dev-dependencies.serde]
version = "^1.0.220"
features = ["derive"]

[[test]]
name = "columns"
required-features = ["derive"]

[[test]]
name = "json"
required-features = ["derive", "json", "serde"]

[[test]]
name = "parameters"
required-features = ["derive"]

[[test]]
name = "query"

[[test]]
name = "raw"

[package.metadata.docs.rs]
features = ["bundled", "complete", "serialized"]
no-default-features = true

rustdoc-args = ["--cfg", "docsrs"]
