[package]
name = "squire-derive"
description = "Procedural macros for Squire"
version = "0.0.1-alpha.3"
edition = "2024"
repository.workspace = true
license.workspace = true
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["sqlite", "database", "derive", "proc_macro"]

[features]
nightly = ["lang-array-assume-init"]
lang-array-assume-init = ["rustversion"]
rustversion = ["dep:rustversion"]

[lib]
proc-macro = true

[dependencies.darling]
version = "0.21"

[dependencies.proc-macro2]
version = "^1.0.94"

[dependencies.quote]
version = "^1.0.40"

[dependencies.syn]
version = "^2.0.100"

[dependencies.rustversion]
workspace = true
optional = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "i686-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
]
