[package]
name = "squire-sqlite3-features"
description = "Detect available features and options in a copy of SQLite"
version = "0.0.1-alpha.2"
edition = "2024"
readme = "Readme.md"
repository.workspace = true
license.workspace = true

[features]
default = ["inherent", "std"]

alloc = []
std = ["alloc", "libloading?/std"]

dynamic = ["dep:libloading"]
build = ["std", "dep:cc"]
pkg-config = ["build", "dep:pkg-config"]

inherent = ["dep:inherent"]
metadata = ["std"]

[dependencies.inherent]
version = "1.0"
optional = true

[dependencies.libloading]
version = "0.9"
optional = true
default-features = false

[dependencies.cc]
version = "1.0"
optional = true

[dependencies.pkg-config]
version = "0.3"
optional = true
