[package]
name = "squire-sqlite3-features"
description = "Detect available SQLite features and configure its build"
version = "0.1.0-alpha.1"
edition = "2024"
readme = "Readme.md"
repository.workspace = true
license.workspace = true

[features]
default = ["std"]

alloc = []
std = ["alloc", "libloading?/std"]

dynamic = ["dep:libloading"]
build = ["std", "dep:cc"]
pkg-config = ["build", "dep:pkg-config"]

metadata = ["std"]

[dependencies.libloading]
version = "0.9"
optional = true
default-features = false

[dependencies.cc]
version = "1.0"
optional = true

[dependencies.pkg-config]
version = "0.3"
optional = true

[package.metadata.docs.rs]
all-features = true

rustdoc-args = ["--cfg", "docsrs"]

targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "i686-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
]
