[package]
name = "squire-sqlite3-sys"
description = "External FFI bindings for the SQLite C API"
version = "0.0.1-alpha.11"
edition = "2024"
links = "sqlite3"
readme = "Readme.md"
repository.workspace = true
license.workspace = true
categories = ["external-ffi-bindings"]
keywords = ["sqlite", "ffi"]

[features]
default = ["bundled", "common", "multi-thread"]
bindgen = [
    "dep:bindgen",
    "dep:syn",
    "dep:prettyplease",
    "dep:proc-macro2",
    "dep:quote",
]
bundled = ["dep:sqlite", "static"]
static = []

multi-thread = []
serialized = ["multi-thread"]

core = [
    "auto-vacuum",
    "memory-db",
    "stat4",
    "temp-db",
    "vtab",
]
common = [
    "core",
    "blob-io",
    "fts",
    "json",
    "stat-vtab",
]
full = [
    "common",
    "authorization",
    "blob-like",
    "extensions",
    "fts3",
    "geo",
    "memory-management",
    "memory-status",
    "metadata",
    "normalize-sql",
    "percentile",
    "preupdate-hook",
    "progress-callback",
    "serialize",
    "session",
    "snapshot",
    "soundex",
    "trace",
]
metadata = ["column-metadata", "decltype"]

authorization = []
auto-vacuum = []
blob-io = []
blob-like = []
column-metadata = []
decltype = []
extensions = []
fts = ["fts5"]
fts3 = []
fts5 = ["blob-io"]
geo = ["geopoly", "rtree"]
geopoly = ["vtab"]
json = []
memory-db = []
memory-management = []
memory-status = []
normalize-sql = []
page-vtab = ["vtab"]
percentile = []
preupdate-hook = []
progress-callback = []
rtree = ["vtab"]
serialize = []
session = ["preupdate-hook"]
shared-cache = ["multi-thread"]
snapshot = []
soundex = []
stat-vtab = ["vtab"]
stat4 = []
tcl-vars = []
temp-db = []
trace = []
utf-16 = []
vtab = []

[build-dependencies.sqlite]
package = "squire-sqlite3-src"
path = "../src"
version = "3.53.0-alpha.4"
optional = true

[build-dependencies.features]
package = "squire-sqlite3-features"
path = "../features"
version = "0.1.0-alpha.4"
features = ["metadata", "build"]

[build-dependencies.bindgen]
version = "^0.72"
optional = true

[build-dependencies.syn]
version = "^2.0"
features = ["full", "parsing", "printing"]
optional = true

[build-dependencies.prettyplease]
version = "^0.2"
optional = true

[build-dependencies.proc-macro2]
version = "^1.0"
optional = true

[build-dependencies.quote]
version = "^1.0"
optional = true

[build-dependencies.pkg-config]
version = "^0.3.32"
optional = true

[package.metadata.docs.rs]
features = ["bundled", "full", "serialized"]
no-default-features = true

rustdoc-args = ["--cfg", "docsrs"]

targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "i686-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
]
