[package]
name = "squire-sqlite3-version"
description = "Parse and compare SQLite library versions"
version = "0.1.0-alpha.1"
edition = "2024"
readme = "Readme.md"
repository.workspace = true
license.workspace = true

[features]
default = ["std"]

std = ["serde?/std"]

[dependencies.serde]
workspace = true
optional = true

[package.metadata.docs.rs]
all-features = true

rustdoc-args = ["--cfg", "docsrs"]

targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "i686-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
]
